@@ -4,6 +4,7 @@ import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Random;
+import java.util.regex.Pattern;
 
 import minicraft.core.Game;
 import minicraft.core.io.Localization;
@@ -18,14 +19,29 @@ public class WorldGenDisplay extends Display {
 	
 	private static final String worldNameRegex = "[a-zA-Z0-9 ]+";
 	
-	private static InputEntry worldSeed = new InputEntry("World Seed", "[0-9]", 20);
+	private static InputEntry worldSeed = new InputEntry("World Seed", "[-!\"#%/()=+,a-zA-Z0-9]+", 20);
 	
 	public static long getSeed() {
 		String seedStr = worldSeed.getUserInput();
+
+		// If there is no input seed, generate random number
 		if(seedStr.length() == 0)
 			return new Random().nextLong();
-		else
+
+		// If the seed is only numbers, just use numbers
+		if(Pattern.matches("[-]?[0-9]*", seedStr)) {
 			return Long.parseLong(seedStr);
+		} else {
+			// If the seed is some combination of numbers/letters, hash them into a floating point number
+			long seed = 1125899906842597L; // rather large prime number
+			int len = seedStr.length();
+
+			for (int i = 0; i < len; i++) {
+				seed = 31*seed + seedStr.charAt(i);
+			}
+
+			return Long.valueOf(seed);
+		}
 	}
 	
 	public static InputEntry makeWorldNameInput(String prompt, List<String> takenNames, String initValue) {
@@ -72,7 +88,7 @@ public class WorldGenDisplay extends Display {
 			}
 		}
 		
-		worldSeed = new InputEntry("World Seed", "[0-9]+", 20) {
+		worldSeed = new InputEntry("World Seed", "[-!\"#%/()=+,a-zA-Z0-9]+", 20) {
 			@Override
 			public boolean isValid() { return true; }
 		};
